--- a/HopIn/package.json
+++ b/HopIn/package.json
@@ -30,6 +30,8 @@
     "@angular-devkit/build-angular": "^14.2.10",
     "@angular/cli": "~14.2.10",
     "@angular/compiler-cli": "^14.2.0",
+    "@types/google.maps": "^3.51.0",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
