--- a/HopIn/package.json
+++ b/HopIn/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@googlemaps/js-api-loader": "^1.15.1",
     "@material/snackbar": "^14.0.0",
     "chart.js": "^4.0.1",
     "dayjs": "^1.11.7",
