--- a/HopIn/package.json
+++ b/HopIn/package.json
@@ -25,10 +25,13 @@
     "@material/snackbar": "^14.0.0",
     "chart.js": "^4.0.1",
     "dayjs": "^1.11.7",
+    "net": "^1.0.2",
     "ngx-daterangepicker-material": "^6.0.4",
     "ngx-google-places-autocomplete": "^2.0.5",
     "ngx-material-timepicker": "^5.5.3",
     "rxjs": "~7.5.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -39,6 +42,8 @@
     "@types/google.maps": "^3.51.0",
     "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~4.0.0",
+    "@types/sockjs-client": "^1.5.1",
+    "@types/stompjs": "^2.3.5",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
