finished ride history card design with star rating

--- a/HopIn/package.json
+++ b/HopIn/package.json
@@ -30,6 +30,7 @@
     "ngx-daterangepicker-material": "^6.0.4",
     "ngx-google-places-autocomplete": "^2.0.5",
     "ngx-material-timepicker": "^5.5.3",
+    "ngx-star-rating": "^2.1.0",
     "rxjs": "~7.5.0",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
