added notification sound for admin when someone presses panic

--- a/HopIn/package.json
+++ b/HopIn/package.json
@@ -23,9 +23,11 @@
     "@auth0/angular-jwt": "^5.1.2",
     "@googlemaps/js-api-loader": "^1.15.1",
     "@material/snackbar": "^14.0.0",
+    "@types/howler": "^2.2.7",
     "angular-cd-timer": "^3.0.0",
     "chart.js": "^4.0.1",
     "dayjs": "^1.11.7",
+    "howler": "^2.2.3",
     "igniteui-webcomponents": "^4.1.1",
     "net": "^1.0.2",
     "ngx-daterangepicker-material": "^6.0.4",
